--- a/app/views/pitches/_review_pitch.html.erb
+++ b/app/views/pitches/_review_pitch.html.erb
@@ -7,7 +7,7 @@
   <div class="mb-4 pb-4">
     <div class="card review_frm">
       <div class="card-header">
-        <h6>Editor Form</h6>
+        <h6>Editor Review Form</h6>
       </div>
       <div class="card-body">
         <div class="small-text-wrapper">
