--- a/app/views/pitches/edit.html.erb
+++ b/app/views/pitches/edit.html.erb
@@ -1,6 +1,6 @@
 <div id="banner_writing" class="editor"></div>
 <div class="apply_wrapper pitch_form_wrapper">
-  <% if (current_user.editor?) && !(@pitch.user.try(:editor)) && (@pitch.status.eql? "Ready for Review") %>
+  <% if (current_user.editor?) && (@pitch.status.eql? "Ready for Review") %>
     <%= render "/pitches/review_pitch" %>
   <% else %>
     <h1 class="d-inline">Edit Pitch</h1><a data-toggle="tooltip" title="See pitch requirements" class="ml-1 position-absolute" href="/choosing-a-topic"><i class="fad fa-info-circle"></i></a>
