--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -1,6 +1,6 @@
 <div class="skinny_wrapper wrapper_padding pitches_wrapper reviews_wrapper">
   <h3 class="pitch_ttl">Editor Feedback for <%= link_to(@post.title, @post) %></h3>
-  <% @reviews = @post.reviews.where(status: "Rejected").order("created_at asc") %>
+  <% @reviews = @post.reviews.where(status: "Rejected").order("created_at desc") %>
   <% @reviews.each_with_index do |review, index| %>
   <% if !(review.notes.blank?) %>
    <p><i style="background-color: #FCD04D;">Editor Notes: <%= review.notes %></p>
@@ -8,7 +8,7 @@
     <div class="card mb-3 changes_requested">
       <div class="card-header">
         <% @editor = User.where(id: review.editor_id).first %>
-        Review #<%= index + 1 %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %>
+        Review #<%= @reviews.count - (index) %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %> on <%= review.updated_at.strftime("%D") %>
         <% if current_user.editor? %>
           <%= link_to review_path(review), method: :delete, :data => {confirm: "Are you sure you want to delete this review?"} do %>
             <i class="fa fa-times" style="color: black;"></i>
