fixed pitch bug and css change

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -704,6 +704,12 @@ a:hover {
     margin: 20px 0;
     padding: 0;
   }
+  .edit_btn {
+    margin-top: 0px !important;
+    position: relative;
+    float: none !important;
+    margin-bottom: 1rem;
+  }
 }
 
 
