character count limit to title

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -704,7 +704,7 @@ a:hover {
     margin: 20px 0;
     padding: 0;
   }
-  .edit_btn {
+  .edit_btn_rel {
     margin-top: 0px !important;
     position: relative;
     float: none !important;
