--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -37,7 +37,7 @@
   <% if @claimed_user.nil? %>
     <%= form_for @post do |f| %>
       <%= f.hidden_field :title, value: @pitch.title %>
-      <%= f.hidden_field :content, value: @pitch.description %>
+      <%= f.hidden_field :content, value: "<i>" << @pitch.description << " (delete pitch description before submitting)</i>" %>
       <%= f.hidden_field :category_id, value: @pitch.category_id %>
       <%= f.hidden_field :pitch_id, value: @pitch.id %>
       <i class="d-block pb-4 mb-2">When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
@@ -61,6 +61,6 @@
       <% end %>
     <% end %>
     <% if ((current_user.id.eql? @pitch.user.id) || current_user.admin) && !@article&.is_published? %>
-      <%= link_to "Edit", edit_pitch_path(@pitch), :class => "link_theme edit_btn", style: "float: left; margin-top: -1.5rem;" %>
+      <%= link_to "Edit", edit_pitch_path(@pitch), :class => "link_theme edit_btn_rel", style: "float: left; margin-top: -1.5rem;" %>
     <% end %>
 </div>
